complete login&register

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
         <div class="col-12 col-md-4 col-lg-4" style="padding-bottom: 34px; padding-top: 24px;">
     <ul>
-        <a style="color:#FF8F52; font-size:18px; margin-left: 40px;">Home</a>
-        <a style="font-size: 18px;">Shop</a>
-        <a style="font-size: 18px;">Blog</a>
+        <a href="index.html" style=" font-size:18px; margin-left: 40px; margin-right: 23px; text-decoration: none;" class="hover-orange" >Home</a>
+        <a href="Shop/shop.html" style="font-size: 18px; margin-right: 23px; text-decoration: none; " class="hover-orange">Shop</a>
+        <a style="font-size: 18px; margin-right: 23px;">Blog</a>
         <a style="font-size: 18px;">About</a>
     </ul>
         </div>
@@ -31,7 +31,7 @@
                 <img src="images/user-solid.png" alt="#">
             </a>
             <a class="">
-                <img src="images/cart-shopping.png" alt="#" style="margin-right: 118px;">
+                <img src="images/cart-shopping.png" alt="#" style="margin-right: 118px; margin-left: 18px;">
             </a>
            </div>
         </div>
@@ -83,7 +83,7 @@
                 <div class="card" style="width: 18rem; margin-right:18px; ">
                     <img class="card-img-top p-2" src="images/flowers/sun.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Daisy</h5>
+                      <h5 class="card-title">Sun flower</h5>
                       <div class="d-flex justify-content-between" >
                         <span>5$</span>
                       <a href="#" ><img src="images/cart-shopping.png">Add to cart</a>
@@ -97,7 +97,7 @@
                     <div class="card" style="width: 18rem; margin-right:18px;">
                         <img class="card-img-top p-2" src="images/flowers/white&green.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Daisy</h5>
+                          <h5 class="card-title">White Rose</h5>
                           <div class="d-flex justify-content-between" >
                             <span>5$</span>
                           <a href="#" ><img src="images/cart-shopping.png">Add to cart</a>
@@ -111,7 +111,7 @@
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top p-2" src="images/flowers/purple&green.png" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Daisy</h5>
+                              <h5 class="card-title">Periwinkle</h5>
                               <div class="d-flex justify-content-between" >
                                 <span>5$</span>
                               <a href="#" ><img src="images/cart-shopping.png">Add to cart</a>
