--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Flower Shop</title>
 </head>
 <body class="container">
+
+   
     <header class="white-backgroundcolor" style="width: 100%;">
     <nav class="row align-items-center" >
         <div class="col-12 col-md-4 col-lg-4" style=" font-size: 2rem; padding-bottom: 28px; padding-top: 24px;">
@@ -30,8 +32,8 @@
             <a class="text-decoration-none" href="Login/login.html">
                 <img src="images/user-solid.png" alt="#">
             </a>
-            <a class="">
-                <img src="images/cart-shopping.png" alt="#" style="margin-right: 118px; margin-left: 18px;">
+            <a href="/Shop/shoppingcart.html" id="Shop">
+                <img  src="images/cart-shopping.png" alt="#" style="margin-right: 118px; margin-left: 18px;">
             </a>
            </div>
         </div>
@@ -371,6 +373,7 @@
     </ul>
 
 </footer>
+<!-- <script src="js/index.js"></script> -->
 </body>
 </html>
 
